[gd_scene load_steps=33 format=3 uid="uid://bmsxnlm6nj6io"]

[ext_resource type="Script" path="res://levels/level_1/Enemies/Scripts/boss.gd" id="1_1crnf"]
[ext_resource type="Texture2D" uid="uid://c2ni6ok3a3iqp" path="res://levels/level_1/Enemies/Boss/BossSprites.png" id="1_lcj2n"]
[ext_resource type="Texture2D" uid="uid://bv0csemkndvxa" path="res://levels/level_1/Player/Assets/Shadow.png" id="1_tbnuk"]
[ext_resource type="Texture2D" uid="uid://bojl7g2v4vc1d" path="res://levels/level_1/Player/Assets/light.png" id="2_hfews"]
[ext_resource type="Shader" path="res://shaders/player_flash.gdshader" id="3_lesnw"]
[ext_resource type="Script" path="res://levels/level_1/Enemies/Scripts/enemy_state_machine.gd" id="4_v4q2m"]
[ext_resource type="Script" path="res://levels/level_1/Enemies/Scripts/States/enemy_state_idle.gd" id="5_vhbdc"]
[ext_resource type="Script" path="res://levels/level_1/Enemies/Scripts/States/enemy_state_wander.gd" id="6_l431d"]
[ext_resource type="Script" path="res://levels/level_1/Enemies/Scripts/States/enemy_state_attack.gd" id="7_4vhy7"]
[ext_resource type="Script" path="res://levels/level_1/Enemies/Scripts/States/enemy_state_death.gd" id="8_187ld"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uebxg"]
shader = ExtResource("3_lesnw")
shader_parameter/flash_color = Color(0.258824, 0.521569, 0.956863, 0.662745)
shader_parameter/flash_value = null

[sub_resource type="Animation" id="Animation_iojw5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="Animation" id="Animation_10dai"]
resource_name = "enemyHit"
length = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.366667, 0.4, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [null, 0.5, 0.5, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gm04l"]
_data = {
"RESET": SubResource("Animation_iojw5"),
"enemyHit": SubResource("Animation_10dai")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1xyqe"]
radius = 68.0
height = 138.0

[sub_resource type="Animation" id="Animation_6ogyx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_i2yel"]
resource_name = "attack_down"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}

[sub_resource type="Animation" id="Animation_ooiot"]
resource_name = "attack_side"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [26, 27, 28]
}

[sub_resource type="Animation" id="Animation_51cw8"]
resource_name = "attack_up"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [23, 24, 25]
}

[sub_resource type="Animation" id="Animation_531ak"]
resource_name = "death_down"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 31, 32]
}

[sub_resource type="Animation" id="Animation_2p6us"]
resource_name = "death_side"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 31, 32]
}

[sub_resource type="Animation" id="Animation_j4mre"]
resource_name = "death_up"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 31, 32]
}

[sub_resource type="Animation" id="Animation_kcx7p"]
resource_name = "idle_down"
length = 1.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.733333, 1, 1.26667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1.4),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lf3bp"]
resource_name = "idle_head"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_o1kcd"]
resource_name = "idle_side"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="Animation" id="Animation_fyhyy"]
resource_name = "idle_up"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_xjtlx"]
resource_name = "walk_down"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_cxd2j"]
resource_name = "walk_side"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 17]
}

[sub_resource type="Animation" id="Animation_2o0fc"]
resource_name = "walk_up"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xbcxf"]
_data = {
"RESET": SubResource("Animation_6ogyx"),
"attack_down": SubResource("Animation_i2yel"),
"attack_side": SubResource("Animation_ooiot"),
"attack_up": SubResource("Animation_51cw8"),
"death_down": SubResource("Animation_531ak"),
"death_side": SubResource("Animation_2p6us"),
"death_up": SubResource("Animation_j4mre"),
"idle_down": SubResource("Animation_kcx7p"),
"idle_head": SubResource("Animation_lf3bp"),
"idle_side": SubResource("Animation_o1kcd"),
"idle_up": SubResource("Animation_fyhyy"),
"walk_down": SubResource("Animation_xjtlx"),
"walk_side": SubResource("Animation_cxd2j"),
"walk_up": SubResource("Animation_2o0fc")
}

[sub_resource type="SystemFont" id="SystemFont_4es2e"]
font_names = PackedStringArray("Google Sans")
font_weight = 800
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcvn8"]
bg_color = Color(0.917647, 0.262745, 0.211765, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Boss" type="CharacterBody2D"]
collision_layer = 258
script = ExtResource("1_1crnf")
detection_radius = 0.0

[node name="ShadowSprite2D2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(0.727042, 80)
scale = Vector2(2.17092, 1.875)
texture = ExtResource("1_tbnuk")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_uebxg")
texture = ExtResource("1_lcj2n")
hframes = 10
vframes = 4
frame = 1

[node name="healthDepletion" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_gm04l")
}

[node name="CollisionShape" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, 25)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1xyqe")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 95)
color = Color(0.742769, 0.137847, 0.248643, 1)
energy = 0.5
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 5.0
texture = ExtResource("2_hfews")
texture_scale = 0.8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_xbcxf")
}

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("4_v4q2m")

[node name="Idle" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("5_vhbdc")
next_state = NodePath("../Attack")

[node name="Wander" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("6_l431d")
next_state = NodePath("../Attack")

[node name="Attack" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("7_4vhy7")
next_state = NodePath("../Death")

[node name="Death" type="Node" parent="EnemyStateMachine"]
script = ExtResource("8_187ld")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 59.0
offset_top = -48.0
offset_right = 127.0
offset_bottom = -24.0
scale = Vector2(0.518958, 0.640001)
theme_override_fonts/font = SubResource("SystemFont_4es2e")
theme_override_font_sizes/font_size = 15
theme_override_styles/fill = SubResource("StyleBoxFlat_xcvn8")
max_value = 200.0
value = 200.0
rounded = true

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-2.38419e-07, 94)
rotation = -0.0213142
